--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row mb-3">
             <div class="col-md-6">
                 <h2>About Me</h2>
-                <p>Hi,<br>
+                <!-- <p>Hi,<br>
                     My name is <span id="name">Mohammad Ali Karimi</span>. I am from Afghanistan and came to the USA in
                     2017. I
                     have a bachelor in electrical engineering; since I’m interested in programming and web development,
@@ -51,22 +51,22 @@
                     to take Bootcamp classes and change my career. In this journey, I’m trying to work hard and practice
                     a lot to
                     learn more.
-                </p>
+                </p> -->
             </div>
 
             <div class="col-md-6">
-                <img src="assets/Images/DSC_1142.JPG" alt="Me" class="img-fluid" width="400" height="400" id="me">
+                <!-- <img src="assets/Images/DSC_1142.JPG" alt="Me" class="img-fluid" width="400" height="400" id="me"> -->
             </div>
         </div>
 
         <div class="row mb-5 mt-5">
             <div class="col-md-12">
-                <h3>My Hobbies:</h3>
+                <!-- <h3>My Hobbies:</h3> -->
                 <div>
                     <ul>
-                        <li>Watching soccer games</li>
+                        <!-- <li>Watching soccer games</li>
                         <li>Reading books</li>
-                        <li>Walking and listening to music and podcasts</li>
+                        <li>Walking and listening to music and podcasts</li> -->
                     </ul>
                 </div>
             </div>
@@ -74,12 +74,12 @@
 
     </div> <!-- /.container -->
 
-    <footer class="container-fluid bg-dark p-1 text-light text-center">
+    <footer class="container-fluid p-1 text-dark text-center">
         <a href="https://github.com/karimi65" target="_blank" title="Mohammad-Ali's Github Account">
             <i class="fa fa-github fa-2x" aria-hidden="true"></i>
         </a>
         <a href="https://www.linkedin.com/in/mohammad-ali-karimi-b83181156/" target="_blank"
-            title="Mohammad-Ali's linkedin Account" <i class="fab fa-linkedin fa-2x" aria-hidden="true" </i></a>
+            title="Mohammad-Ali's linkedin Account"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
     </footer>
 
 
