--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="col-md-6">
-                <img src="assets/Images/DSC_1142.JPG" alt="Me" class="img-fluid" width="400" height="400" id="me">
+                <img src="./assets/images/DSC_1142.JPG" alt="Me" class="img-fluid" width="400" height="400" id="me">
             </div>
         </div>
 
