--- a/portfolio.html
+++ b/portfolio.html
@@ -43,10 +43,30 @@
         </div>
 
         <div class="row mb-3">
-            <div class="card col-md-4" id="projects">
-                <div class="card-body">
+
+            <div class="card col-md-12" id="projects">
+                <div class=" card-body">
                     <h5 class="card-title">Project 1</h5>
+                    <h6 class="card-subtitle mb-2">Work Day Schedueler</h6>
+                    <img src="./assets/images/project1.JPG" alt="screenshot" class="img-fluid">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's
+                        content.</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                            aria-valuemax="100">
+                        </div>
+                    </div>
+                    <a href="https://github.com/karimi65/work-day-scheduler" class="card-link">Repository</a>
+                    <a href="https://karimi65.github.io/work-day-scheduler/" class="card-link">Live App</a>
+                </div>
+            </div>
+
+            <div class="card col-md-12" id="projects">
+                <div class="card-body">
+                    <h5 class="card-title">Project 2</h5>
                     <h6 class="card-subtitle mb-2"><span class="badge badge-danger">Wikigames</span></h6>
+                    <img src="./assets/images/project2.JPG" alt="screenshot" class="img-fluid">
                     <p class="card-text"><strong>Wikigames</strong> help users to make a more informed
                         purchasing decision by viewing videos, and a description of the game.</p>
                     <div class="progress">
@@ -60,39 +80,23 @@
                 </div>
             </div>
 
-            <div class="card col-md-4" id="projects">
+            <div class="card col-md-12" id="projects">
                 <div class=" card-body">
-                    <h5 class="card-title">Project 2</h5>
-                    <h6 class="card-subtitle mb-2">......</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
+                    <h5 class="card-title">Project 3</h5>
+                    <h6 class="card-subtitle mb-2">Burger app</h6>
+                    <img src="./assets/images/project3.JPG" alt="screenshot" class="img-fluid">
+                    <p class="card-text">Eat-Da-Burger! is a restaurant app that lets users input the names of burgers
+                        they'd like to eat.</p>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                             aria-valuemax="100">
                         </div>
                     </div>
-                    <a href="#" class="card-link">Repository</a>
-                    <a href="#" class="card-link">Live App</a>
+                    <a href="https://github.com/karimi65/burger" class="card-link">Repository</a>
+                    <a href="https://enigmatic-waters-41603.herokuapp.com/" class="card-link">Live App</a>
                 </div>
             </div>
 
-            <div class="card col-md-4" id="projects">
-                <div class=" card-body">
-                    <h5 class="card-title">Project 3</h5>
-                    <h6 class="card-subtitle mb-2">......</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-                            aria-valuemax="100">
-                        </div>
-                    </div>
-                    <a href="#" class="card-link">Repository</a>
-                    <a href="#" class="card-link">Live App</a>
-                </div>
-            </div>
 
         </div> <!-- first row -->
 
