--- a/portfolio.html
+++ b/portfolio.html
@@ -44,35 +44,39 @@
 
         <div class="row mb-3">
 
-            <div class="card col-md-12" id="projects">
+            <div class="card col-md-12 mb-3" class="projects">
                 <div class=" card-body">
                     <h5 class="card-title">Project 1</h5>
-                    <h6 class="card-subtitle mb-2">Work Day Schedueler</h6>
+                    <h6 class="card-subtitle mb-2"><span class="badge bg-warning text-dark">Work Day
+                            Schedueler</span></h6>
                     <img src="./assets/images/project1.JPG" alt="screenshot" class="img-fluid">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's
-                        content.</p>
-                    <div class="progress">
+                    <hr>
+                    <p class="card-text">This application allows users to schedule their time and save any event or
+                        activity for each hour of the day from 9:00 am to 5:00 pm</p>
+                    <!-- <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                             aria-valuemax="100">
                         </div>
-                    </div>
-                    <a href="https://github.com/karimi65/work-day-scheduler" class="card-link">Repository</a>
-                    <a href="https://karimi65.github.io/work-day-scheduler/" class="card-link">Live App</a>
+                    </div> -->
+                    <a href="https://github.com/karimi65/work-day-scheduler" class="badge badge-primary"
+                        target="_blank">Repository</a>
+                    <a href="https://karimi65.github.io/work-day-scheduler/" class="badge badge-info"
+                        target="_blank">Live App</a>
                 </div>
             </div>
 
-            <div class="card col-md-12" id="projects">
+            <div class="card col-md-12 mb-3" class="projects">
                 <div class="card-body">
                     <h5 class="card-title">Project 2</h5>
                     <h6 class="card-subtitle mb-2"><span class="badge badge-danger">Wikigames</span></h6>
                     <img src="./assets/images/project2.JPG" alt="screenshot" class="img-fluid">
+                    <hr>
                     <p class="card-text"><strong>Wikigames</strong> help users to make a more informed
                         purchasing decision by viewing videos, and a description of the game.</p>
-                    <div class="progress">
+                    <!-- <div class="progress">
                         <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%"
                             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                    </div>
+                    </div> -->
                     <a href=" https://github.com/mokulling/wikigames" class="badge badge-primary"
                         target="_blank">Repository</a>
                     <a href="https://mokulling.github.io/wikigames/" class="badge badge-info" target="_blank">Live
@@ -80,20 +84,25 @@
                 </div>
             </div>
 
-            <div class="card col-md-12" id="projects">
+            <div class="card col-md-12" class="projects">
                 <div class=" card-body">
                     <h5 class="card-title">Project 3</h5>
-                    <h6 class="card-subtitle mb-2">Burger app</h6>
+                    <h6 class="card-subtitle mb-2"><span class="badge bg-success">Burger app</span></h6>
                     <img src="./assets/images/project3.JPG" alt="screenshot" class="img-fluid">
-                    <p class="card-text">Eat-Da-Burger! is a restaurant app that lets users input the names of burgers
+                    <hr>
+                    <p class="card-text"><strong>Eat-Da-Burger!</strong> is a restaurant app that lets users input the
+                        names of burgers
                         they'd like to eat.</p>
-                    <div class="progress">
+
+                    <!-- <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                             aria-valuemax="100">
                         </div>
-                    </div>
-                    <a href="https://github.com/karimi65/burger" class="card-link">Repository</a>
-                    <a href="https://enigmatic-waters-41603.herokuapp.com/" class="card-link">Live App</a>
+                    </div> -->
+                    <a href="https://github.com/karimi65/burger" class="badge badge-primary"
+                        target="_blank">Repository</a>
+                    <a href="https://enigmatic-waters-41603.herokuapp.com/" class="badge badge-info"
+                        target="_blank">Live App</a>
                 </div>
             </div>
 
