image updated in contact page

--- a/contact.html
+++ b/contact.html
@@ -45,18 +45,18 @@
             <div class="col-md-6">
 
                 <div class="form-group">
-                    <label>Name</label>
-                    <input type="text" class="form-control">
+                    <!-- <label>Name</label> -->
+                    <input type="text" class="form-control" placeholder="Name">
                 </div>
 
                 <div class="form-group">
-                    <label>Email</label>
-                    <input type="text" class="form-control">
+                    <!-- <label>Email</label> -->
+                    <input type="text" class="form-control" placeholder="Email">
                 </div>
 
                 <div class="form-group">
-                    <label>Message</label>
-                    <textarea class="form-control" rows="5"></textarea>
+                    <!-- <label>Message</label> -->
+                    <textarea class="form-control" rows="5" placeholder="Message"></textarea>
                 </div>
 
                 <div class="form-group">
@@ -65,8 +65,8 @@
 
             </div>
             <div class="col-md-6">
-                <img src="https://www.phoenixfolds.com/images/user/contact_page.png" alt="contact us" class="img-fluid"
-                    id="pic">
+                <img src="https://lh3.googleusercontent.com/proxy/rfkattqwsYEc-n287ZU70DIPJIRhvM15buYSDcmslFuX7FrV-xPijnrz1tVHDVxJSO3x3q2FomI7F7qj6jN0eviCU9z_2qBCwIfTxKRQ2udt0JaCgto"
+                    alt="contact us" class="img-fluid" id="pic">
             </div>
         </div>
     </div> <!-- /.container -->
