fix image issue

--- a/contact.html
+++ b/contact.html
@@ -65,8 +65,7 @@
 
             </div>
             <div class="col-md-6">
-                <img src="https://lh3.googleusercontent.com/proxy/rfkattqwsYEc-n287ZU70DIPJIRhvM15buYSDcmslFuX7FrV-xPijnrz1tVHDVxJSO3x3q2FomI7F7qj6jN0eviCU9z_2qBCwIfTxKRQ2udt0JaCgto"
-                    alt="contact us" class="img-fluid" id="pic">
+                <img src="./assets/images/cntctImg.jpg" alt="contact us" class="img-fluid" id="pic">
             </div>
         </div>
     </div> <!-- /.container -->
