--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./assets/My-Resume.pdf">Resume</a>
+                </li>
             </ul>
         </div>
     </nav>
