--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./assets/My-Resume.pdf">Resume</a>
+                </li>
             </ul>
         </div>
     </nav>
