update contact page

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
     <footer class="container-fluid p-1 text-dark text-center">
         <a href="https://github.com/karimi65" target="_blank" title="Mohammad-Ali's Github Account">
-            <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-github fa-2x mr-2" aria-hidden="true"></i>
         </a>
         <a href="https://www.linkedin.com/in/mohammad-ali-karimi-b83181156/" target="_blank"
-            title="Mohammad-Ali's linkedin Account"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+            title="Mohammad-Ali's linkedin Account"><i class="fa fa-linkedin fa-2x ml-2" aria-hidden="true"></i></a>
     </footer>
 
 
