--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet">
 
@@ -35,6 +37,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./assets/My-Resume.pdf">Resume</a>
                 </li>
+
             </ul>
         </div>
     </nav>
@@ -70,6 +73,16 @@
             <div class="col-md-6">
                 <img src="./assets/images/cntctImg.jpg" alt="contact us" class="img-fluid" id="pic">
             </div>
+        </div>
+
+        <div>
+            <a class="btn" href="https://www.linkedin.com/in/mohammad-ali-karimi-b83181156/" target="_blank"
+                id="linkedin"><i class="fa fa-linkedin fa-2x fluid" aria-hidden="true"></i>
+            </a>
+
+            <a class="btn" href="https://github.com/karimi65" target="_blank" id="github">
+                <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            </a>
         </div>
     </div> <!-- /.container -->
 
