--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="row mb-5 mt-5">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <h3>My Hobbies:</h3>
                 <div>
                     <ul>
@@ -72,6 +72,17 @@
                         <li>Walking and listening to music and podcasts</li>
                     </ul>
                 </div>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <h3>Skills:</h3>
+            <div>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
 
