--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./assets/My-Resume.pdf">Resume</a>
+                    <a class="nav-link" href="./assets/Mohammad-Ali-Karimi.pdf">Resume</a>
                 </li>
 
             </ul>
