--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./assets/My-Resume.pdf">Resume</a>
+                    <a class="nav-link" href="./assets/Mohammad-Ali-Karimi.pdf">Resume</a>
                 </li>
             </ul>
         </div>
@@ -64,6 +64,21 @@
 
         <div class="row mb-5 mt-5">
             <div class="col-md-6">
+                <h3>Skills:</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Node.js</li>
+                    <li>MySQL</li>
+                    <li>Express</li>
+                    <li>MongoDB</li>
+                </ul>
+            </div>
+
+
+            <div class="col-md-6">
                 <h3>My Hobbies:</h3>
                 <div>
                     <ul>
@@ -72,17 +87,6 @@
                         <li>Walking and listening to music and podcasts</li>
                     </ul>
                 </div>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <h3>Skills:</h3>
-            <div>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
             </div>
         </div>
 
