--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./assets/Mohammad Ali Karimi.pdf">Resume</a>
+                    <a class="nav-link" href="./assets/Mohammad-Ali-Karimi.pdf">Resume</a>
                 </li>
             </ul>
         </div>
