add email to contact page

--- a/contact.html
+++ b/contact.html
@@ -50,24 +50,43 @@
 
             <div class="col-md-6">
 
-                <div class="form-group">
-                    <!-- <label>Name</label> -->
-                    <input type="text" class="form-control" placeholder="Name">
+                <div>
+                    <a class="btn" href="mailto:ali216k@gmail.com" target="_blank" id="Email">
+                        <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
+                    </a>
                 </div>
 
-                <div class="form-group">
-                    <!-- <label>Email</label> -->
-                    <input type="text" class="form-control" placeholder="Email">
+                <div>
+                    <a class="btn" href="https://www.linkedin.com/in/mohammad-ali-karimi-b83181156/" target="_blank"
+                        id="linkedin"><i class="fa fa-linkedin fa-4x fluid" aria-hidden="true"></i>
+                    </a>
                 </div>
 
-                <div class="form-group">
-                    <!-- <label>Message</label> -->
-                    <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                <div>
+                    <a class="btn" href="https://github.com/karimi65" target="_blank" id="github">
+                        <i class="fa fa-github fa-4x" aria-hidden="true"></i>
+                    </a>
                 </div>
 
-                <div class="form-group">
-                    <button class="btn btn-primary btn-block">Send</button>
-                </div>
+
+                <!-- <div class="form-group"> -->
+                <!-- <label>Name</label> -->
+                <!-- <input type="text" class="form-control" placeholder="Name"> -->
+                <!-- </div> -->
+
+                <!-- <div class="form-group"> -->
+                <!-- <label>Email</label> -->
+                <!-- <input type="text" class="form-control" placeholder="Email"> -->
+                <!-- </div> -->
+
+                <!-- <div class="form-group"> -->
+                <!-- <label>Message</label> -->
+                <!-- <textarea class="form-control" rows="5" placeholder="Message"></textarea> -->
+                <!-- </div> -->
+
+                <!-- <div class="form-group"> -->
+                <!-- <button class="btn btn-primary btn-block">Send</button> -->
+                <!-- </div> -->
 
             </div>
             <div class="col-md-6">
@@ -75,15 +94,7 @@
             </div>
         </div>
 
-        <div>
-            <a class="btn" href="https://www.linkedin.com/in/mohammad-ali-karimi-b83181156/" target="_blank"
-                id="linkedin"><i class="fa fa-linkedin fa-2x fluid" aria-hidden="true"></i>
-            </a>
 
-            <a class="btn" href="https://github.com/karimi65" target="_blank" id="github">
-                <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-            </a>
-        </div>
     </div> <!-- /.container -->
 
 </body>
