add written email to About-page

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                         <li>Walking and listening to music and podcasts</li>
                     </ul>
                 </div>
+                <h3>Email:</h3>
+                <a href="mailto:ali216k@gmail.com" target="_blank" id="Email">ali216k@gmail.com</a>
+
             </div>
         </div>
 
