add icons for skills

--- a/index.html
+++ b/index.html
@@ -66,14 +66,25 @@
             <div class="col-md-6">
                 <h3>Skills:</h3>
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>React</li>
-                    <li>Node.js</li>
+                    <li><i class="fa fa-html5 fa-2x"></i>
+                        HTML
+                    </li>
+                    <li><i class="fa fa-css3 fa-2x"></i>
+                        CSS
+                    </li>
+                    <li><i class="fab fa-js-square fa-2x"></i>
+                        JavaScript
+                    </li>
+                    <li><i class="fa fa-react fa-2x"></i>
+                        React
+                    </li>
+                    <li><i class="fa fa-node fa-2x"></i>
+                        Node.js
+                    </li>
                     <li>MySQL</li>
                     <li>Express</li>
                     <li>MongoDB</li>
+
                 </ul>
             </div>
 
