--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
           <div class="card-body">
             <h5 class="card-title">Project 2</h5>
             <h6 class="card-subtitle mb-2">
-              <span class="badge badge-danger">Wikigames</span>
+              <span class="badge badge-danger">Password Generator</span>
             </h6>
             <img
               src="./assets/images/project2.JPG"
@@ -115,22 +115,22 @@
             />
             <hr />
             <p class="card-text">
-              <strong>Wikigames</strong> help users to make a more informed
-              purchasing decision by viewing videos, and a description of the
-              game.
+              <strong>Password Generator:</strong> An application that enables
+              employees to generate random passwords based on the criteria that
+              they've selected.
             </p>
             <!-- <div class="progress">
                         <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%"
                             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
                     </div> -->
             <a
-              href=" https://github.com/mokulling/wikigames"
+              href=" https://github.com/karimi65/password-generator"
               class="badge badge-primary"
               target="_blank"
               >Repository</a
             >
             <a
-              href="https://mokulling.github.io/wikigames/"
+              href="https://karimi65.github.io/password-generator/"
               class="badge badge-info"
               target="_blank"
               >Live App</a
