--- a/index.html
+++ b/index.html
@@ -1,6 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <mata charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mohammad Ali Karimi</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+
+    <style>
+
+      /* * {
+        border: thin red solid
+      } */
+
+      body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #fef6e4;
+        display: flex;
+        justify-content: center;
+        font-family: 'Times New Roman', Times, serif;
+      }
+
+      .items {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        max-width: 640px;
+        flex-grow: 1;
+      }
+
+      .banner {
+        display: flex;
+        justify-content: center;
+      }
+
+      .banner-image {
+        width: 128px;
+        height: 128px;
+        object-fit: cover;
+        border-radius: 128px;
+      }
+
+      .name {
+        color: #001858;
+        display: flex;
+        justify-content: center;
+      }
+
+      .social-icons {
+        display: flex;
+        justify-content: space-around;
+      }
+
+      .social-icons a {
+        color: #001858;
+        text-decoration: none;
+      }
+
+      .link {
+        background-color: #8bd3dd;
+        display: flex;
+        align-items: center;
+        padding: 5px;
+        border-radius: 30px;
+      }
+
+      .link a {
+        color: #0d0d0d;
+        text-decoration: none;
+        text-align: center;
+        flex-grow: 1;
+      }
+
+      .thumbnail {
+        width: 48px;
+        height: 48px;
+        border-radius: 48px;
+        object-fit: cover;
+
+      }
+
+    </style>
+
+  </head>
+
+  <body>
+
+    <nav class="navbar justify-content-center" style="background-color: #34a4b8e5;">
+      <div class="container-fluid">
+        <a class="navbar-brand">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="items">
+
+      <div class="banner">
+        <img src="/links/thumbnails/profile-pic.jpg" alt="Mohammad Ali Karimi headshot" class="banner-image">
+      </div>
+
+      <div class="name">
+        Mohammad Ali Karimi
+      </div>
+
+      <div class="social-icons">
+        <a href="https://github.com/karimi65" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
+        <a href="https://www.linkedin.com/in/mohammad-ali-karimi/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+
+      </div>
+
+      <div class="link">
+        <img class="thumbnail" src="/links/thumbnails/pbl.png" alt="learning">
+        <a href="https://github.com/practical-tutorials/project-based-learning" target="_blank">Be an active learner! (Project-based learning)</a>
+      </div>
+
+      <div class="link">
+        <img class="thumbnail" src="/links/thumbnails/build.jpg" alt="build">
+        <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank">Build your own!</a>
+      </div>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+  </body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
@@ -135,9 +354,9 @@
         </div>
       </div>
     </div>
-    <!-- /.container -->
+    <-- /.container -->
 
-    <footer class="container-fluid p-1 text-dark text-center">
+<!-- <footer class="container-fluid p-1 text-dark text-center">
       <a
         href="https://github.com/karimi65"
         target="_blank"
@@ -152,7 +371,6 @@
         ><i class="fa fa-linkedin fa-2x ml-2" aria-hidden="true"></i
       ></a>
     </footer>
-    -->
   </body>
 
   <script
@@ -165,4 +383,4 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"
   ></script>
-</html>
+</html>  -->
