--- a/index.html
+++ b/index.html
@@ -8,81 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 
-    <style>
-
-      /* * {
-        border: thin red solid
-      } */
-
-      body {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #fef6e4;
-        display: flex;
-        justify-content: center;
-        font-family: 'Times New Roman', Times, serif;
-      }
-
-      .items {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        max-width: 640px;
-        flex-grow: 1;
-      }
-
-      .banner {
-        display: flex;
-        justify-content: center;
-      }
-
-      .banner-image {
-        width: 128px;
-        height: 128px;
-        object-fit: cover;
-        border-radius: 128px;
-      }
-
-      .name {
-        color: #001858;
-        display: flex;
-        justify-content: center;
-      }
-
-      .social-icons {
-        display: flex;
-        justify-content: space-around;
-      }
-
-      .social-icons a {
-        color: #001858;
-        text-decoration: none;
-      }
-
-      .link {
-        background-color: #8bd3dd;
-        display: flex;
-        align-items: center;
-        padding: 5px;
-        border-radius: 30px;
-      }
-
-      .link a {
-        color: #0d0d0d;
-        text-decoration: none;
-        text-align: center;
-        flex-grow: 1;
-      }
-
-      .thumbnail {
-        width: 48px;
-        height: 48px;
-        border-radius: 48px;
-        object-fit: cover;
-
-      }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
   </head>
 
