making some changes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <li class="nav-item">
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="https://karimi65.github.io/links/">Link</a>
             </li>
           </ul>
         </div>
