--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <mata charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
+  </head>
+
+  <body>
+
+    <div>
+
+      <div class="container" id="my-portfolio"> 
+        <div class="alert alert-success" role="alert">
+          <h1>Wlcome!</h1>
+        </div>
+  
+        <div class="row mb-3">
+          <div class="card col-md-6 mb-3" class="projects">
+            <div class="card-body">
+              <h5 class="card-title">Project 1</h5>
+              <h6 class="card-subtitle mb-2">
+                <span class="badge bg-warning text-dark"
+                  >Work Day Schedueler</span>
+              </h6>
+              <img
+                src="./assets/images/project1.JPG"
+                alt="screenshot"
+                class="img-fluid"
+              />
+              <hr />
+              <p class="card-text">
+                This application allows users to schedule their time and save any
+                event or activity for each hour of the day from 9:00 am to 5:00 pm
+              </p>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%"
+                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+              </div>
+              <a
+                href="https://github.com/karimi65/work-day-scheduler"
+                class="badge badge-primary"
+                target="_blank"
+                >Repository</a
+              >
+              <a
+                href="https://karimi65.github.io/work-day-scheduler/"
+                class="badge badge-info"
+                target="_blank"
+                >Live App
+              </a>
+            </div>
+          </div>
+  
+          <div class="card col-md-6 mb-3" class="projects">
+            <div class="card-body">
+              <h5 class="card-title">Project 2</h5>
+              <h6 class="card-subtitle mb-2">
+                <span class="badge badge-danger">Password Generator</span>
+              </h6> 
+              <img
+                src="./assets/images/project2.JPG"
+                alt="screenshot"
+                class="img-fluid"
+              />
+              <hr />
+              <p class="card-text">
+                <strong>Password Generator:</strong> An application that enables
+                employees to generate random passwords based on the criteria that
+                they've selected.
+              </p>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%"
+                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+              </div>
+              <a
+                href=" https://github.com/karimi65/password-generator"
+                class="badge badge-primary"
+                target="_blank"
+                >Repository</a
+              >
+              <a
+                href="https://karimi65.github.io/password-generator/"
+                class="badge badge-info"
+                target="_blank"
+                >Live App</a
+              >
+            </div>
+          </div>
+  
+          <div class="card col-md-6" class="projects">
+            <div class="card-body">
+              <h5 class="card-title">Project 3</h5>
+              <h6 class="card-subtitle mb-2">
+                <span class="badge bg-success">Burger app</span>
+              </h6>
+              <img
+                src="./assets/images/project3.JPG"
+                alt="screenshot"
+                class="img-fluid"
+              />
+              <hr />
+              <p class="card-text">
+                <strong>Eat-Da-Burger!</strong> is a restaurant app that lets
+                users input the names of burgers they'd like to eat.
+              </p>
+  
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%"
+                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+              </div>
+              <a
+                href="https://github.com/karimi65/burger"
+                class="badge badge-primary"
+                target="_blank"
+                >Repository</a
+              >
+              <a
+                href="https://enigmatic-waters-41603.herokuapp.com/"
+                class="badge badge-info"
+                target="_blank"
+                >Live App</a
+              >
+            </div>
+          </div>
+        </div>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+  </body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link
+    <title>Portfolio</title> -->
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
-    />
+    /> -->
+
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -18,10 +213,11 @@
     />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
+  </head> -->
 
-  <!-- <body id="my-works">
-    <nav
+  <!-- <body id="my-works"> -->
+    
+    <!-- <nav
       class="navbar navbar-expand-lg navbar-dark"
       style="background-color: cadetblue"
     >
@@ -53,125 +249,10 @@
           </li>
         </ul>
       </div>
-    </nav> -->
+    </nav>  -->
 
-    <div class="container" id="my-portfolio">
-      <!-- <div class="alert alert-success" role="alert">
-        <h1>Wlcome!</h1>
-      </div> -->
 
-      <div class="row mb-3">
-        <div class="card col-md-12 mb-3" class="projects">
-          <div class="card-body">
-            <h5 class="card-title">Project 1</h5>
-            <h6 class="card-subtitle mb-2">
-              <span class="badge bg-warning text-dark"
-                >Work Day Schedueler</span
-              >
-            </h6>
-            <img
-              src="./assets/images/project1.JPG"
-              alt="screenshot"
-              class="img-fluid"
-            />
-            <hr />
-            <p class="card-text">
-              This application allows users to schedule their time and save any
-              event or activity for each hour of the day from 9:00 am to 5:00 pm
-            </p>
-            <!-- <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-                            aria-valuemax="100">
-                        </div>
-                    </div> -->
-            <a
-              href="https://github.com/karimi65/work-day-scheduler"
-              class="badge badge-primary"
-              target="_blank"
-              >Repository</a
-            >
-            <a
-              href="https://karimi65.github.io/work-day-scheduler/"
-              class="badge badge-info"
-              target="_blank"
-              >Live App</a
-            >
-          </div>
-        </div>
 
-        <div class="card col-md-12 mb-3" class="projects">
-          <div class="card-body">
-            <h5 class="card-title">Project 2</h5>
-            <h6 class="card-subtitle mb-2">
-              <span class="badge badge-danger">Password Generator</span>
-            </h6>
-            <img
-              src="./assets/images/project2.JPG"
-              alt="screenshot"
-              class="img-fluid"
-            />
-            <hr />
-            <p class="card-text">
-              <strong>Password Generator:</strong> An application that enables
-              employees to generate random passwords based on the criteria that
-              they've selected.
-            </p>
-            <!-- <div class="progress">
-                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%"
-                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                    </div> -->
-            <a
-              href=" https://github.com/karimi65/password-generator"
-              class="badge badge-primary"
-              target="_blank"
-              >Repository</a
-            >
-            <a
-              href="https://karimi65.github.io/password-generator/"
-              class="badge badge-info"
-              target="_blank"
-              >Live App</a
-            >
-          </div>
-        </div>
-
-        <div class="card col-md-12" class="projects">
-          <div class="card-body">
-            <h5 class="card-title">Project 3</h5>
-            <h6 class="card-subtitle mb-2">
-              <span class="badge bg-success">Burger app</span>
-            </h6>
-            <img
-              src="./assets/images/project3.JPG"
-              alt="screenshot"
-              class="img-fluid"
-            />
-            <hr />
-            <p class="card-text">
-              <strong>Eat-Da-Burger!</strong> is a restaurant app that lets
-              users input the names of burgers they'd like to eat.
-            </p>
-
-            <!-- <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-                            aria-valuemax="100">
-                        </div>
-                    </div> -->
-            <a
-              href="https://github.com/karimi65/burger"
-              class="badge badge-primary"
-              target="_blank"
-              >Repository</a
-            >
-            <a
-              href="https://enigmatic-waters-41603.herokuapp.com/"
-              class="badge badge-info"
-              target="_blank"
-              >Live App</a
-            >
-          </div>
-        </div>
-      </div>
       <!-- first row -->
 
       <!-- <div class="row mb-3">
@@ -216,7 +297,7 @@
       </div>
     </div>
     <!-- ./container -->
-  </body>
+  <!-- </body>
 
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -228,4 +309,4 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"
   ></script>
-</html>
+</html> -->
