--- a/index.html
+++ b/index.html
@@ -41,17 +41,20 @@
         <img src="/assets/images/profile.jpg" alt="Mohammad Ali Karimi headshot" class="banner-image">
       </div>
 
-      <div class="name mb-0">
+      <div class="name">
         Mohammad Ali Karimi
       </div>
-      <span class="title">Software Developer</span>
+
+      <div class="title">
+        Software Developer
+      </div>
 
       <div class="skill-icons">
         <i class="fa-brands fa-js fa-xl"></i> <i class="fa-brands fa-html5 fa-xl"></i> <i class="fa-brands fa-css3-alt fa-xl"></i> <i class="fa-brands fa-node fa-xl"></i> <i class="fa-solid fa-gem fa-xl"></i> <i class="fa-brands fa-bootstrap fa-xl"> </i> <i class="fa-brands fa-git fa-xl"></i> 
       </div> 
 
       <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
       </p>
 
       <div class="social-icons">
