--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,7 @@
             <div class="projcard-tagbox">
               <span class="projcard-tag">HTML</span>
               <span class="projcard-tag">CSS</span>
+              <span class="projcard-tag">JavaScript</span>
             </div>
           </div>
         </div>
@@ -43,9 +44,9 @@
               employees to generate random passwords based on the criteria that
               they've selected.</div>
             <div class="projcard-tagbox">
-              <span class="projcard-tag">PHP</span>
-              <span class="projcard-tag">SQL</span>
-              <span class="projcard-tag">Database</span>
+              <span class="projcard-tag">HTML</span>
+              <span class="projcard-tag">CSS</span>
+              <span class="projcard-tag">JavaScript</span>
             </div>
           </div>
         </div>
@@ -59,10 +60,12 @@
             <div class="projcard-subtitle">Eat Da Burger</div>
             <div class="projcard-bar"></div>
             <div class="projcard-description">It is a restaurant app that lets
-              users input the names of burgers they'd like to eat.</div>
+              users input the names of burgers they'd like to eat.
+            </div>
             <div class="projcard-tagbox">
-              <span class="projcard-tag">Excel</span>
-              <span class="projcard-tag">VBA</span>
+              <span class="projcard-tag">JS</span>
+              <span class="projcard-tag">Handlebars</span>
+              <span class="projcard-tag">MySQL</span>
             </div>
           </div>
         </div>
@@ -77,9 +80,9 @@
             <div class="projcard-bar"></div>
             <div class="projcard-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
             <div class="projcard-tagbox">
-              <span class="projcard-tag">iOS</span>
-              <span class="projcard-tag">Android</span>
-              <span class="projcard-tag">Cordova</span>
+              <span class="projcard-tag">HTML</span>
+              <span class="projcard-tag">CSS</span>
+              <span class="projcard-tag">Ruby on Rails</span>
             </div>
           </div>
         </div>
